--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR"/>
     <head>
+        <title>Instagram</title>
+        <link rel="icon" type="image/png" href="Images/instagram_logo.png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="reset.css"/>
         <link rel="stylesheet" href="style.css"/>
-        <title>Instagram</title>
     </head>
 
     <body>
